# learning-rust

./: readme.md
rps/: Cargo.toml  README.md
rps/src/: main.rs
tired/: Cargo.toml  readme.md
tired/src/: main.rs
todo-squeel/: .env  .gitignore  Cargo.toml  docker-compose.yml
todo-squeel/migrations/: 1_setup.sql  2_users_and_todos.sql  3_profiles.sql
todo-squeel/src/: config.rs  lib.rs  main.rs
todo-squeel/src/http/: mod.rs
todo-squeel/src/http/auth/: mod.rs
todo-squeel/src/http/error/: mod.rs
todo-squeel/src/http/jwt/: mod.rs
todo-squeel/src/http/models/: mod.rs
todo-squeel/src/http/user/: mod.rs
todo_squeel2/: Cargo.toml
todo_squeel2/src/: main.rs
todo_squeel2/src/http/: mod.rs
todo_squeel2/src/http/jwt/: mod.rs
ttt/: Cargo.toml  readme.md
ttt/src/: main.rs
