[package]
name = "tired"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
axum-macros = "0.3.7"
chrono = "0.4.24"
fake = { version = "2.5.0", features = ["chrono"] }
rand = "0.8.5"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
