[package]
name = "todo_squeel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "uuid",
  "time",
] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
argon2 = "0.5.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
anyhow = "1.0.48"
async-trait = "0.1.51"
env_logger = "0.10.0"
itertools = "0.10.1"
log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
clap = "4.2.1"
jsonwebtoken = "8.3.0"
